# urdfz

./: .gitattributes  LICENSE  README.md  pack.py  pack_test.py  pixi.toml  pyproject.toml  unpack.py  urdfz.py
.github/workflows/: cd.yml  ci.yml
tests/: __init__.py  test_idempotence.py  test_pack.py  test_robot_urdf_integration.py
tests/assets/: robot.urdf
urdfz/: __init__.py  __main__.py  pack.py  unpack.py  urdf_utils.py
